--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.7.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
