--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.7.0",
+    "@openfga/sdk": "^0.8.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
